--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
     <base href="http://tt-cc.cn/">
-    <title>汀汀涔涔 — Pure Css3 Personal Website, No Javascript, No Image, No Svg</title>
+    <title>汀汀涔涔 - Pure Css3 Personal 3D Website, No Javascript, No Image, No Svg</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="汀汀涔涔,汀汀,涔涔,pure css,3d house">
+    <meta name="keywords" content="汀汀涔涔,pure-css,no-javascript, no-image,3d-Website">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta property="og:url" content="http://www.tt-cc.cn/">
-    <meta property="og:title" content="汀汀涔涔 — Pure Css3 Personal Website, No Javascript, No Image, No Svg">
+    <meta property="og:title" content="汀汀涔涔 - Pure Css3 Personal 3D Website, No Javascript, No Image, No Svg">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="汀汀涔涔, pure css3 personal website, no javascript, no image, no svg">
-    <meta name="description" content="汀汀涔涔, pure css3 personal website, no javascript, no image, no svg">
-    <meta http-equiv="Cache-Control" content="no-transform "/>
+    <meta property="og:description" content="汀汀涔涔, pure css3 personal 3D website, no javascript, no image, no svg">
+    <meta name="description" content="汀汀涔涔, pure css3 personal 3D website, no javascript, no image, no svg">
+    <meta http-equiv="Cache-Control" content="no-transform"/>
     <link rel="shortcut icon" href="http://imwr.github.io/resources/favicon.ico">
     <link rel="bookmark" href="http://imwr.github.io/resources/favicon.ico">
 </head>
