--- a/_posts/2016-06-16-color-change.html
+++ b/_posts/2016-06-16-color-change.html
@@ -1,9 +1,9 @@
 ---
-layout: post
+layout: github-web
 title: Color Change —— 颜色变换插件，可改变文字、背景、边框颜色
 description: Color Change —— 颜色变换插件，可改变文字、背景、边框颜色
 category: front-end
-tags: Color Change,jquery plugin
+tags: color change,jquery plugin
 ---
 <section class="main-inner">
     <div class="paper-title">Demo1:</div>
