--- a/404.html
+++ b/404.html
@@ -1,5 +1,8 @@
 ---
 layout: default
-title: 出错啦
+title: 404 Error | Sorry, this page does not exist.
 ---
-404
+
+<div class="error">
+    <h1>Whoah, that's a 404 Error</h1>
+</div>
