--- a/_posts/2016-06-16-color-change.html
+++ b/_posts/2016-06-16-color-change.html
@@ -2,6 +2,7 @@
 layout: github-web
 title: Color Change —— 颜色变换插件，可改变文字、背景、边框颜色
 description: Color Change —— 颜色变换插件，可改变文字、背景、边框颜色
+name: ColorChange
 category: front-end
 tags: color change,jquery plugin
 ---
