--- a/_posts/2016-06-16-color-change.html
+++ b/_posts/2016-06-16-color-change.html
@@ -106,7 +106,7 @@ tags: color change,jquery plugin
         </tbody>
     </table>
 </section>
-<script src="js/ColorChange.js"></script>
+<script src="http://imwr.github.io/{{ page.name }}/js/ColorChange.js"></script>
 <script type="text/javascript" id="js1">
     $("#demo1").colorChange();
 </script>
