--- a/index.html
+++ b/index.html
@@ -1,32 +1,8 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    <title>汀汀涔涔</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-    <meta name="format-detection" content="telephone=no"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
-    <meta name="keywords" content="tt-cc"/>
-    <meta name="description" content="tt-cc"/>
-    <meta http-equiv="Cache-Control" content="no-transform "/>
-    <link rel="shortcut icon" href="http://imwr.github.io/resources/favicon.ico">
-    <link rel="bookmark" href="http://imwr.github.io/resources/favicon.ico">
-</head>
-<body>
-<header>
-    <div class="main-inner">
-        <a href="https://github.com/imwr" target="_blank" class="button">
-            <small>View project on</small>
-            GitHub</a>
-
-        <h1>Imwr</h1>
-    </div>
-</header>
-<section class="main-inner">
-汀汀涔涔
-</section>
-</body>
-</html>
+---
+layout: default
+title: Open Source Projects
+menu: open-source
+css: ['open-source.css']
+javascript: ['underscore-min.js']
+---
+{% include open-source-page.html %}
