--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: page
 title: About Me
 menu: about
 subtitle:   <h3>Download My CV</h3>
-css: ['about.css', 'sidebar-popular-repo.css']
+css: ['sidebar-popular-repo.css']
 ---
 {% if site.author.contact %}
 {% assign len = site.author.contact | size %}
