--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ css: ['sidebar-popular-repo.css']
             {% for post in site.posts | limit: 5 %}
             <li class="post-list-item">
                 <h2 class="post-list-title">
-                    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                    <a href="{{ post.url }}">{{ post.title }}</a>
                 </h2>
 
                 <p class="post-list-description">
