--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-menu: about
+menu: About
 subtitle:   <h3>Download My CV</h3>
 css: ['sidebar-popular-repo.css']
 ---
