update layout and style

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: page
 title: About Me
 menu: About
 subtitle:   <h3>Download My CV</h3>
-css: ['sidebar-popular-repo.css']
+css: ['open-source.css']
 ---
 {% if site.author.contact %}
 {% assign len = site.author.contact | size %}
