--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: 404 Error | Sorry, this page does not exist.
+permalink: /404.html
 ---
 <style>
     body {
@@ -8,15 +9,15 @@ title: 404 Error | Sorry, this page does not exist.
     }
 </style>
 <div style="position: absolute;top: 50%;width: 287px;left: 50%;margin-left: -143px;margin-top: -67px;">
-    <img src="assets/images/404.png"/>
-    <div>something wrong, goto <a href="http://tt-cc.cn">home</a>(<span id="time">5</span>)</div>
+    <img src="/assets/images/404.png"/>
+    <div>Something wrong, goto <a href="/">Home</a>(<span id="time">5</span>)</div>
 </div>
 <script type="text/javascript">
     var el = document.getElementById("time");
     setInterval(function(){
         var val = Number(el.innerHTML);
         if(val <= 1){
-            location.replace("http://tt-cc.cn");
+            location.replace("/");
         }else{
             el.innerHTML = val - 1;
         }
