--- a/index.html
+++ b/index.html
@@ -12,34 +12,32 @@ css: ['open-source.css']
                 <span class="glyphicon glyphicon-map-marker"></span>
                 {{ site.location }}
             </span>
-            <span class="meta-info hvr-grow">
-                <span class="glyphicon glyphicon-user"></span>
-                <a href="{{ site.company_url }}" target="_blank">{{ site.company }}</a>
-            </span>
         </div>
     </div>
 </section>
-<section class="content container">
-    <!-- Post List -->
-    <div class="col-md-8 row">
-        {% for post in site.posts | limit: 8 %}
-        <div class="panel panel-default">
-            <h3 class="panel-top">
-                <a href="{{ post.url }}">{{ post.title }}</a>
-            </h3>
-            <div class="panel-body">
-                {{ post.excerpt | strip_html | strip }}
+<section class="container">
+    <div class="row">
+        <div class="col-md-8">
+            {% for post in site.posts | limit: 8 %}
+            <div class="panel panel-default">
+                <h3 class="panel-top">
+                    <a href="{{ post.url }}">{{ post.title }}</a>
+                </h3>
+
+                <div class="panel-body">
+                    {{ post.excerpt | strip_html | strip }}
+                </div>
+                <div class="panel-footer">
+                    <span class="glyphicon glyphicon-time"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
+                    Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
+                    <a class="pull-right" href="{{ post.url }}">Read More</a>
+                </div>
             </div>
-            <div class="panel-footer">
-                <span class="glyphicon glyphicon-time"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
-                Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
-                <a class="pull-right" href="{{ post.url }}">Read More</a>
-            </div>
+            {% endfor %}
+            <a href="/blog" class="col-xs-12"><h3 class="pull-right">Read More ...</h3></a>
         </div>
-        {% endfor %}
-        <a href="/blog" class="col-xs-12"><h3 class="pull-right">Read More ...</h3></a>
-    </div>
-    <div class="col-md-4">
-        {% include sidebar-popular-repo.html %}
+        <div class="col-md-4">
+            {% include sidebar-popular-repo.html %}
+        </div>
     </div>
 </section>
