--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@ layout: page
 title: Tags
 menu: Tags
 ---
-<div class="col-md-8 row">
+<div class="col-md-8">
     <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
         <li class="active">{{ page.title }}</li>
