fixed some issues

--- a/_posts/2015-06-06-AutoAddto.html
+++ b/_posts/2015-06-06-AutoAddto.html
@@ -1,11 +1,12 @@
 ---
 layout: github
+menu: Blog
 title: AutoAddto —— Input Assist 输入建议 中文拼音 异步请求数据
 category: jquery-plugin
 tags: [autoaddto,auto-compelte,input-suggestion]
 github: AutoAddto
-css: ['/AutoAddto/css/AutoAddTo.css']
-js: ['/AutoAddto/js/AutoAddTo.js']
+romotecss: ['/AutoAddto/css/AutoAddTo.css']
+romotejs: ['/AutoAddto/js/AutoAddTo.js']
 ---
 <div class="paper-title">Demo1:</div>
 <div class="paper-div">
