--- a/categories.html
+++ b/categories.html
@@ -15,7 +15,7 @@ menu: Categories
             {% for post in category[1] %}
             <a class="list-group-item" href="{{ post.url }}">
                 {{ post.title }}
-                <div class="pull-right">
+                <div class="pull-right hidden-xs">
                     <span class="glyphicon glyphicon-time "> </span>
                     {{ post.date | date: "%Y-%m-%d" }}
                 </div>
