--- a/index.html
+++ b/index.html
@@ -20,21 +20,23 @@ css: ['open-source.css']
         <div class="col-md-8">
             {% for post in site.posts | limit: 8 %}
             <div class="panel panel-default">
-                <h3 class="panel-top">
+                <div class="panel-top">
                     <a href="{{ post.url }}">{{ post.title }}</a>
-                </h3>
+                </div>
 
                 <div class="panel-body">
                     {{ post.excerpt | strip_html | strip }}
                 </div>
                 <div class="panel-footer">
-                    <span class="glyphicon glyphicon-time"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
+                    <span class="hidden-xs">
+                        <span class="glyphicon glyphicon-time"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
+                    </span>
                     Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
                     <a class="pull-right" href="{{ post.url }}">Read More</a>
                 </div>
             </div>
             {% endfor %}
-            <a href="/blog" class="col-xs-12"><h3 class="pull-right">Read More ...</h3></a>
+            <a href="/blog" class="col-xs-12"><h3 class="pull-right">More ...</h3></a>
         </div>
         <div class="col-md-4">
             {% include sidebar-popular-repo.html %}
