--- a/_posts/2015-06-06-AutoAddto.html
+++ b/_posts/2015-06-06-AutoAddto.html
@@ -7,6 +7,8 @@ tags: [autoaddto,auto-compelte,input-suggestion]
 github: AutoAddto
 romotecss: ['/AutoAddto/css/AutoAddTo.css']
 romotejs: ['/AutoAddto/js/AutoAddTo.js']
+redirect_from:
+- /front-end/jquery-plugins/autoaddto
 ---
 <div class="paper-title">Demo1:</div>
 <div class="paper-div">
