update layout and style

--- a/_posts/2015-06-06-AutoAddto.html
+++ b/_posts/2015-06-06-AutoAddto.html
@@ -10,6 +10,9 @@ romotejs: ['/AutoAddto/js/AutoAddTo.js']
 redirect_from:
 - /front-end/jquery-plugins/autoaddto
 ---
+<p>AutoAddto ——&nbsp;Input suggestion，jQuery输入建议插件，支持中文拼音、异步请求数据。PC端同时可键盘操作。</p>
+<hr/>
+
 <div class="paper-title">Demo1:</div>
 <div class="paper-div">
     <input id="demo1" placeholder="keywords..."/>
