--- a/about.html
+++ b/about.html
@@ -2,26 +2,70 @@
 layout: page
 title: About Me
 menu: About
-subtitle:   <h3>Download My CV</h3>
 css: ['open-source.css']
 ---
-{% if site.author.contact %}
-{% assign len = site.author.contact | size %}
-{% assign current_index = 0 %}
-<div class="sidebar-personal-info-section">
-    <p> Follow me:
-        {% for contact in site.author.contact %}
-        {% assign iconname = contact[0] %}
-        {% if contact[0] == 'email' %}
-        {% assign iconname = 'envelope' %}
-        {% endif %}
-        <a href="{{ contact[1] }}">
-            <i class="glyphicon glyphicon-{{ iconname }}" aria-hidden="true"></i>
-        </a>
-        {% assign current_index = current_index | plus: 1 %}
-        {% if current_index != len %}|{% endif %}
-        {% endfor %}
-    </p>
+<div class="col-md-8">
+    <h2>About me</h2>
+
+    <p>{{ site.name }}</p>
+
+    <h2>Contact</h2>
+    <ul>
+        <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
+        <li>Github：<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
+        <li>Weibo：<a href="{{ site.weibo_url }}">{{ site.github_url }}</a></li>
+        <li>Website：<a href="{{ site.url }}">{{ site.url }}</a></li>
+    </ul>
+    <h2>Skill Keywords</h2>
+    {% if site.skill_software_keywords %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Software Engineer Keywords</h3>
+        </div>
+        <div class="panel-body">
+            {% for keyword in site.skill_software_keywords %}
+            <button class="btn btn-default" type="button">{{ keyword }}</button>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+    {% if site.skill_j2ee_keywords %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">J2EE Developer Keywords</h3>
+        </div>
+        <div class="panel-body">
+            {% for keyword in site.skill_j2ee_keywords %}
+            <button class="btn btn-default" type="button">{{ keyword }}</button>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+    {% if site.skill_mobile_app_keywords %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Mobile Developer Keywords</h3>
+        </div>
+        <div class="panel-body">
+            {% for keyword in site.skill_mobile_app_keywords %}
+            <button class="btn btn-default" type="button">{{ keyword }}</button>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+    {% if site.skill_web_keywords %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Web Developer Keywords</h3>
+        </div>
+        <div class="panel-body">
+            {% for keyword in site.skill_web_keywords %}
+            <button class="btn btn-default" type="button">{{ keyword }}</button>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
 </div>
-{% endif %}
-{% include about.html %}
+<div class="col-md-4">
+    {% include sidebar-popular-repo.html %}
+</div>
