--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 menu: Home
 css: ['open-source.css']
 ---
-<section class="jumbotron" style="background: #4183c4;">
+<section class="jumbotron geopattern" data-pattern-id="ttcc">
     <div class="container">
         <h3>{{ site.description }}</h3>
 
