--- a/tags.html
+++ b/tags.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Tags
+title: All My Tags
 menu: Tags
 ---
 <div class="col-md-8">
@@ -27,8 +27,10 @@ menu: Tags
     {% endfor %}
 </div>
 <div class="col-md-4">
-    <h3> Tag Cloud</h3>
-    {% for tag in site.tags %}
-    <a href="#{{ tag[0] | slugify }}">{{ tag[0] }}</a>
-    {% endfor %}
+    <div class="btn-label">
+        <h3> Available Tags</h3>
+        {% for tag in site.tags %}
+        <a href="#{{ tag[0] | slugify }}" class="btn btn-default">{{ tag[0] }}({{ tag[1].size }})</a>
+        {% endfor %}
+    </div>
 </div>
