update layout and style; add font-awesome;

--- a/_posts/2015-06-06-AutoAddto.html
+++ b/_posts/2015-06-06-AutoAddto.html
@@ -10,7 +10,7 @@ romotejs: ['/AutoAddto/js/AutoAddTo.js']
 redirect_from:
 - /front-end/jquery-plugins/autoaddto
 ---
-<p>AutoAddto ——&nbsp;Input suggestion，jQuery输入建议插件，支持中文拼音、异步请求数据。PC端同时可键盘操作。</p>
+<p>AutoAddto —— Input suggestion，jQuery输入建议插件，支持中文拼音、异步请求数据。PC端同时可键盘操作。</p>
 <hr/>
 
 <div class="paper-title">Demo1:</div>
