--- a/categories.html
+++ b/categories.html
@@ -16,7 +16,7 @@ menu: Categories
             <a class="list-group-item" href="{{ post.url }}">
                 {{ post.title }}
                 <div class="pull-right hidden-xs">
-                    <span class="glyphicon glyphicon-time "> </span>
+                    <span class="fa fa-calendar"> </span>
                     {{ post.date | date: "%Y-%m-%d" }}
                 </div>
             </a>
