--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 menu: Home
-css: ['open-source.css']
 ---
 <section class="jumbotron geopattern" data-pattern-id="ttcc">
     <div class="container">
@@ -29,7 +28,7 @@ css: ['open-source.css']
                 </div>
                 <div class="panel-footer">
                     <span class="hidden-xs">
-                        <span class="glyphicon glyphicon-time"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
+                        <span class="fa fa-calendar"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
                     </span>
                     Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
                     <a class="pull-right" href="{{ post.url }}">Read More</a>
