--- a/tags.html
+++ b/tags.html
@@ -17,7 +17,7 @@ menu: Tags
             <a class="list-group-item" href="{{ post.url }}">
                 {{ post.title }}
                 <div class="pull-right hidden-xs">
-                    <span class="glyphicon glyphicon-time"> </span>
+                    <span class="fa fa-calendar"> </span>
                     {{ post.date | date: "%Y-%m-%d" }}
                 </div>
             </a>
