--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About Me | 汀汀涔涔
+title: About Me
 menu: About
 ---
 <div class="col-md-8">
@@ -61,7 +61,7 @@ menu: About
         <div class="panel-heading">
             <h3 class="panel-title">Web Developer Keywords</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body btn-label">
             {% for keyword in site.skill_web_keywords %}
             <button class="btn btn-default" type="button">{{ keyword }}</button>
             {% endfor %}
