--- a/_posts/2015-06-06-AutoAddto.html
+++ b/_posts/2015-06-06-AutoAddto.html
@@ -13,28 +13,28 @@ redirect_from:
 <p>AutoAddto —— Input suggestion，jQuery输入建议插件，支持中文拼音、异步请求数据。PC端同时可键盘操作。</p>
 <hr/>
 
-<div class="paper-title">Demo1:</div>
-<div class="paper-div">
+<h3>Demo1:</h3>
+<p>
     <input id="demo1" placeholder="keywords..."/>
-</div>
-<div class="paper-sep"></div>
+</p>
+<hr/>
 
-<div class="paper-title">Demo2:</div>
-<div class="paper-div">
+<h3>Demo2:</h3>
+<p>
     <input id="demo2" placeholder="keywords..."/>
-</div>
-<div class="paper-sep"></div>
+</p>
+<hr/>
 
-<div class="paper-title">Demo3:</div>
-<div class="paper-div">
+<h3>Demo3:</h3>
+<p>
     <input id="demo3" placeholder="keywords..."/>
-</div>
-<div class="paper-sep"></div>
+</p>
+<hr/>
 
-<div class="paper-title">Demo4:</div>
-<div class="paper-div">
+<h3>Demo4:</h3>
+<p>
     <input id="demo4" placeholder="keywords..."/>
-</div>
+</p>
 LOCAL SPRING SERVER：
 <pre type='syntaxhighlighter' class="brush: js;class-name: paper-code; toolbar: false">
         @RequestMapping(value = "/test")
@@ -46,9 +46,9 @@ LOCAL SPRING SERVER：
             return list;
         }
     </pre>
-<div class="paper-sep"></div>
+<hr/>
 
-<div class="paper-title paper-specil" id="options">options:</div>
+<h3 id="options">options:</h3>
 <table class="table table-bordered">
     <thead>
     <tr>
@@ -104,7 +104,7 @@ LOCAL SPRING SERVER：
     </tbody>
 </table>
 
-<div class="paper-title paper-specil">Method:</div>
+<h3>Method:</h3>
 <table class="table table-bordered">
     <thead>
     <tr>
