fixed：location icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ menu: Home
 
         <div id="jumbotron-meta-info">
             <span class="meta-info">
-                <span class="glyphicon glyphicon-map-marker"></span>
+                <i class="fa fa-map-marker"></i>
                 {{ site.location }}
             </span>
         </div>
