update layout and style

--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,18 @@ title: About Me
 menu: About
 ---
 <div class="col-md-8">
-    <h2>Contact</h2>
+    <div class="paper-title">Contact</div>
     <ul class="list-inline">
         <li>
-            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-envelope"></i>&nbsp;Email
+            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-envelope fa-fw"></i>&nbsp;Email
             </a>
         </li>
         <li>
-            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-github"></i>&nbsp;Github
+            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-github fa-fw"></i>&nbsp;Github
             </a>
         </li>
         <li>
-            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-weibo"></i>&nbsp;Weibo
+            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-weibo fa-fw"></i>&nbsp;Weibo
             </a>
         </li>
     </ul>
