add jquery-game and jquery-app posts

--- a/_posts/2016-04-30-ninebox.html
+++ b/_posts/2016-04-30-ninebox.html
@@ -3,7 +3,7 @@ layout: github-plugins
 menu: Blog
 title: NineBox 九宫格密码锁插件
 category: jquery-plugin
-tags: [nine-box,password]
+tags: [nine-box,password,九宫格]
 github: NineBox
 romotejs: ["/NineBox/lib/box.encrypt.js","/NineBox/js/NineBox.css3.js","/NineBox/js/NineBox.canvas.js"]
 redirect_from:
