add blog sub nav

--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,8 @@
 layout: page
 title: About Me
 menu: About
+redirect_from:
+- /contact-us
 ---
 <div class="col-md-8">
     <div class="paper-title">Contact</div>
