--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ menu: Home
                 </div>
                 <div class="panel-footer">
                     <span class="hidden-xs">
-                        <span class="fa fa-calendar"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
+                        <span class="fa fa-calendar fa-fw"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
                     </span>
                     Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
                     <a class="pull-right" href="{{ post.url }}">Read More</a>
