update open-source card style

--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,11 @@ redirect_from:
             <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-weibo fa-fw"></i>&nbsp;Weibo
             </a>
         </li>
+        <li>
+            <a href="#" target="_top"><i class="fa fa-map-marker"></i>&nbsp;
+                {{ site.location }}
+            </a>
+        </li>
     </ul>
     <h2>Skill Keywords</h2>
     {% if site.skill_software_keywords %}
