fixed open-source pattern

--- a/open-source/index.html
+++ b/open-source/index.html
@@ -5,6 +5,7 @@ menu: Open-Source
 ---
 <section class="container">
     <div class="row">
+
         {% if site.github && site.github.public_repositories %}
         {% assign sorted_repos = (site.github.public_repositories | sort: 'stargazers_count') | reverse | where: "fork",
         "false" %}
@@ -14,7 +15,8 @@ menu: Open-Source
         {% for repo in sorted_repos %}
         <div class="col-md-4 text-center">
             <div class="thumbnail thumbnail-card">
-                <div class="card-img gradient-pattern{{forloop.index}}" data-pattern-id="{{ repo.name }}">
+                {% assign pattern = (forloop.index | modulo:6 ) %}
+                <div class="card-img gradient-pattern{{ pattern }}" data-pattern-id="{{ repo.name }}">
                     <a href="{{ repo.html_url }}" target="_blank"><h3>{{ repo.name }}</h3></a>
                 </div>
                 <div class="card-body">{{ repo.description }}</div>
