--- a/search/index.html
+++ b/search/index.html
@@ -3,25 +3,27 @@ layout: page
 title: Search
 menu: search
 ---
-<ol class="breadcrumb">
-    <li><a href="/">Home</a></li>
-    <li class="active">{{ page.title }}</li>
-</ol>
-<!--<form action="/search" method="get" class="input-group">-->
+<div class="col-md-12">
+    <ol class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        <li class="active">{{ page.title }}</li>
+    </ol>
+    <!--<form action="/search" method="get" class="input-group">-->
     <!--<input type="text" id="search-query" class="form-control" placeholder="Search"-->
-           <!--autocomplete="off">-->
-        <!--<span class="input-group-btn">-->
-            <!--<button class="btn btn-default" type="button">-->
-                <!--<span class="glyphicon glyphicon-search"></span>-->
-            <!--</button>-->
-        <!--</span>-->
-<!--</form>-->
-<form action="/search" method="get">
-    <input type="text" id="search-query" class="form-control" placeholder="Search"
-           autocomplete="off">
-</form>
-<br/>
-<ul class="list-group" id="search-results"></ul>
+    <!--autocomplete="off">-->
+    <!--<span class="input-group-btn">-->
+    <!--<button class="btn btn-default" type="button">-->
+    <!--<span class="glyphicon glyphicon-search"></span>-->
+    <!--</button>-->
+    <!--</span>-->
+    <!--</form>-->
+    <form action="/search" method="get">
+        <input type="text" id="search-query" class="form-control" placeholder="Search"
+               autocomplete="off">
+    </form>
+    <br/>
+    <ul class="list-group" id="search-results"></ul>
+</div>
 <script src="/components/search-jekyll/jekyll-search.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
     function getQueryString(name) {
