remove bootstrap.js and geopattern.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 menu: Home
 ---
-<section class="jumbotron geopattern" data-pattern-id="ttcc">
+<section class="jumbotron gradient-pattern1" data-pattern-id="ttcc">
     <div class="container">
         <h3>{{ site.description }}</h3>
         <div id="jumbotron-meta-info">
