update 404.html style

--- a/404.html
+++ b/404.html
@@ -1,25 +1,64 @@
 ---
-layout: default
+layout: page
 title: 404 Error | Sorry, this page does not exist.
 permalink: /404.html
 ---
-<style>
-    body {
-        background: #f8f8f8;
-    }
-</style>
-<div style="position: absolute;top: 50%;width: 287px;left: 50%;margin-left: -143px;margin-top: -67px;">
-    <img src="/assets/images/404.png"/>
-    <div>Something wrong, goto <a href="/">Home</a>(<span id="time">5</span>)</div>
+<div class="well">
+    <h1 class="grey lighter smaller">
+											<span class="blue bigger-125">
+												<i class="fa fa-sitemap"></i>
+												404
+											</span>
+        Page Not Found
+    </h1>
+
+    <hr/>
+    <h3 class="lighter smaller">We looked everywhere but we couldn't find it!</h3>
+
+    <div>
+        <form class="form-search" action="/search">
+												<span class="input-icon align-middle">
+													<i class="ace-icon fa fa-search"></i>
+
+													<input type="text" class="search-query"
+                                                           placeholder="Give it a search..."/>
+												</span>
+            <button class="btn btn-sm" type="submit">Go!</button>
+        </form>
+
+        <div class="space"></div>
+        <h4 class="smaller">Try one of the following:</h4>
+
+        <ul class="list-unstyled spaced inline bigger-110 margin-15">
+            <li>
+                <i class="ace-icon fa fa-hand-o-right blue"></i>
+                Re-check the url for typos
+            </li>
+
+            <li>
+                <i class="ace-icon fa fa-hand-o-right blue"></i>
+                Read the faq
+            </li>
+
+            <li>
+                <i class="ace-icon fa fa-hand-o-right blue"></i>
+                Tell us about it
+            </li>
+        </ul>
+    </div>
+
+    <hr/>
+    <div class="space"></div>
+
+    <div class="center">
+        <a href="javascript:history.back()" class="btn btn-grey">
+            <i class="fa fa-arrow-left"></i>
+            Go Back
+        </a>
+
+        <a href="#" class="btn btn-primary">
+            <i class="ace-icon fa fa-home"></i>
+            Home
+        </a>
+    </div>
 </div>
-<script type="text/javascript">
-    var el = document.getElementById("time");
-    setInterval(function(){
-        var val = Number(el.innerHTML);
-        if(val <= 1){
-            location.replace("/");
-        }else{
-            el.innerHTML = val - 1;
-        }
-    },1000)
-</script>
