--- a/404.html
+++ b/404.html
@@ -51,14 +51,9 @@ permalink: /404.html
     <div class="space"></div>
 
     <div class="center">
-        <a href="javascript:history.back()" class="btn btn-grey">
+        <a href="javascript:history.back()" class="btn btn-primary">
             <i class="fa fa-arrow-left"></i>
             Go Back
-        </a>
-
-        <a href="#" class="btn btn-primary">
-            <i class="ace-icon fa fa-home"></i>
-            Home
         </a>
     </div>
 </div>
