add about site page

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@ redirect_from:
 - /contact-us
 ---
 <div class="col-md-8">
+    <p>A Senior Engineer of JAVA Interested In Front-end Techniques</p>
     <div class="paper-title">Contact</div>
     <ul class="list-inline">
         <li>
@@ -75,6 +76,7 @@ redirect_from:
         </div>
     </div>
     {% endif %}
+    <p><a href="/about/site">About This Site</a></p>
 </div>
 <div class="col-md-4">
     {% include sidebar-popular-repo.html %}
