fixed some issues

--- a/_posts/2016-02-15-mathame.html
+++ b/_posts/2016-02-15-mathame.html
@@ -1,7 +1,7 @@
 ---
 menu: Blog
 title: Math-Sports-Game 简单的粒子数学运动测试
-category: jquery-game
+category: web-game
 tags: [math-sports,jquery-game]
 github: math-sports
 romotecss: ['/math-sports/css/mathame.css']
