--- a/about/index.html
+++ b/about/index.html
@@ -6,24 +6,22 @@ redirect_from:
 - /contact-us
 ---
 <div class="col-md-8">
-    <p>A Senior Engineer of JAVA Interested In Front-end Techniques</p>
+    <p>
+        A Senior Engineer of JAVA, Interested In Front-end Techniques
+        <i class="fa fa-map-marker"></i>&nbsp;{{ site.location }}
+    </p>
     <div class="paper-title">Contact</div>
     <ul class="list-inline">
         <li>
+            <a href="{{ site.github_url }}" target="_top"><i class="fa fa-github fa-fw"></i>&nbsp;Github
+            </a>
+        </li>
+        <li>
+            <a href="{{ site.weibo_url }}" target="_top"><i class="fa fa-weibo fa-fw"></i>&nbsp;Weibo
+            </a>
+        </li>
+        <li>
             <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-envelope fa-fw"></i>&nbsp;Email
-            </a>
-        </li>
-        <li>
-            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-github fa-fw"></i>&nbsp;Github
-            </a>
-        </li>
-        <li>
-            <a href="mailto:{{ site.email }}" target="_top"><i class="fa fa-weibo fa-fw"></i>&nbsp;Weibo
-            </a>
-        </li>
-        <li>
-            <a href="#" target="_top"><i class="fa fa-map-marker"></i>&nbsp;
-                {{ site.location }}
             </a>
         </li>
     </ul>
