--- a/demo/hiticon/index.html
+++ b/demo/hiticon/index.html
@@ -2,9 +2,9 @@
 title: Hiticon 打假图标游戏 —— PC版演示
 row: false
 ---
-<iframe frameborder="0" onload="iFrameHeight(this)" scrolling="no" src="http://tt-cc.cn/whac-a-logo/"
+<iframe frameborder="0" onload="iFrameHeight(this)" scrolling="no" src="{{site.url}}/whac-a-logo/"
         style="min-width: 100%;width: 320px;"></iframe>
-<p><a href="http://tt-cc.cn/whac-a-logo/index.html" target="_blank">Open This Page In New Tab</a></p>
+<p><a href="{{site.url}}/whac-a-logo/index.html" target="_blank">Open This Page In New Tab</a></p>
 
 <script type="text/javascript" language="javascript">
     function iFrameHeight(ifm) {
