--- a/demo/imageless-mobile/index.html
+++ b/demo/imageless-mobile/index.html
@@ -2,9 +2,9 @@
 title: Mobile-Simulator 演示
 ---
 <div class="col-md-8">
-    <iframe frameborder="0" onload="iFrameHeight(this)" scrolling="no" src="http://tt-cc.cn/mobile-simulator/"
+    <iframe frameborder="0" onload="iFrameHeight(this)" scrolling="no" src="{{site.url}}/mobile-simulator/"
             style="min-width: 100%;width: 320px;min-height: 614px"></iframe>
-    <p><a href="http://tt-cc.cn/mobile-simulator/" target="_blank">Open This Page In New Tab</a></p>
+    <p><a href="{{site.url}}/mobile-simulator/" target="_blank">Open This Page In New Tab</a></p>
 
     <script type="text/javascript" language="javascript">
         function iFrameHeight(ifm) {
