update 3d-shape-generator demo page

--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -14,19 +14,19 @@ github: css3-3d-shape-generator
     Create 3D CSS shapes below pretty easily：
     <ul>
         <li>cube 立方体 <img src="{{site.url}}/{{page.github}}/images/cube.png"/></li>
+        <li> polyhedron 多面框 <img src="{{site.url}}/{{page.github}}/images/polyhedron.png"/></li>
         <li>pyramid 金字塔</li>
         <li> cylinder 圆柱体</li>
         <li> prism 棱柱</li>
         <li> sphere 球体</li>
         <li> fan 扇叶</li>
-        <li> polyhedron 多面框 <img src="{{site.url}}/{{page.github}}/images/polyhedron.png"/></li>
         <li> ladder 梯</li>
         <li>......</li>
     </ul>
 </div>
 <div class="paper-title"> how to use</div>
 <div class="paper-div">
-    <p>Just visit <a href="{{site.url}}/{{page.github}}">Shape Ganerator Page</a></p>
+    <p>Just visit <a href="{{site.url}}/{{page.github}}">3D Shape Ganerator Page</a></p>
 
     <p>Maybe you need to tweak code slightly.</p>
 </div>
