fixed search query

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ permalink: /404.html
 												<span class="input-icon align-middle">
 													<i class="ace-icon fa fa-search"></i>
 
-													<input type="text" class="search-query"
+													<input type="text" class="search-query" name="query"
                                                            placeholder="Give it a search..."/>
 												</span>
             <button class="btn btn-sm" type="submit">Go!</button>
