add: generate pyramid

--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -15,7 +15,7 @@ github: css3-3d-shape-generator
     <ul>
         <li>cube 立方体 <img src="{{site.url}}/{{page.github}}/images/cube.png"/></li>
         <li> polyhedron 多面框 <img src="{{site.url}}/{{page.github}}/images/polyhedron.png"/></li>
-        <li>pyramid 金字塔</li>
+        <li>pyramid 金字塔 <img src="{{site.url}}/{{page.github}}/images/pyramid.png"/></li>
         <li> cylinder 圆柱体</li>
         <li> prism 棱柱</li>
         <li> sphere 球体</li>
