add: prism image

--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -16,11 +16,11 @@ github: css3-3d-shape-generator
         <li>cube 立方体 <img src="{{site.url}}/{{page.github}}/images/cube.png"/></li>
         <li> polyhedron 多面框 <img src="{{site.url}}/{{page.github}}/images/polyhedron.png"/></li>
         <li>pyramid 金字塔 <img src="{{site.url}}/{{page.github}}/images/pyramid.png"/></li>
-        <li> cylinder 圆柱体</li>
-        <li> prism 棱柱</li>
-        <li> sphere 球体</li>
-        <li> fan 扇叶</li>
-        <li> ladder 梯</li>
+        <li> cylinder 圆柱体 <img src="{{site.url}}/{{page.github}}/images/cylinder.png"/></li>
+        <li> prism 棱柱 <img src="{{site.url}}/{{page.github}}/images/prism.png"/></li></li>
+        <li> sphere 球体 <img src="{{site.url}}/{{page.github}}/images/sphere.png"/></li>
+        <li> fan 扇叶 <img src="{{site.url}}/{{page.github}}/images/fan.png"/></li>
+        <li> ladder 梯 <img src="{{site.url}}/{{page.github}}/images/ladder.png"/></li>
         <li>......</li>
     </ul>
 </div>
