--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -26,7 +26,7 @@ github: css3-3d-shape-generator
 </div>
 <div class="paper-title"> how to use</div>
 <div class="paper-div">
-    <p>Just visit <a href="{{site.url}}/{{page.github}}">3D Shape Ganerator Page</a></p>
+    <h3>Just visit <a href="{{site.url}}/{{page.github}}">3D Shape Ganerator Page</a></h3>
 
     <p>Maybe you need to tweak code slightly.</p>
 </div>
