--- a/_posts/2016-04-30-ninebox.html
+++ b/_posts/2016-04-30-ninebox.html
@@ -8,6 +8,7 @@ github: NineBox
 romotejs: ["/NineBox/lib/box.encrypt.js","/NineBox/js/NineBox.css3.js","/NineBox/js/NineBox.canvas.js"]
 redirect_from:
 - /front-end/jquery-plugins/ninebox
+- /web/NineBox/example
 ---
 <p>NineBox —— jQuery九宫格密码锁插件，支持CSS3和Canvas渲染模式，同时适用于PC和手机端。</p>
 <hr/>
