--- a/snippet/index.html
+++ b/snippet/index.html
@@ -8,6 +8,11 @@ menu: Snippets
         <li><a href="/">Home</a></li>
         <li class="active">{{ page.title }}</li>
     </ol>
+    {% if (site.my_snippet.size < 1) %}
+    <p class="col-md-12">
+        <i class="fa fa-github fa-info" aria-hidden="true"></i>
+        There is no any snippets~</p>
+    {% else %}
     {% for post in site.my_snippet %}
     <div class="panel panel-default">
         <div class="panel-top">
@@ -21,11 +26,32 @@ menu: Snippets
                     <span class="hidden-xs">
                         <span class="fa fa-calendar fa-fw"></span> {{ post.date | date: "%Y-%m-%d" }}&nbsp;
                     </span>
-            Posted in <a href="/category/{{ post.category }}">{{ post.category }}</a>
+            Posted with
+            {% for tag in post.tags %}
+            <a href="/tag/{{tag}}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
+            {% endfor %}
             <a class="pull-right" href="{{ post.url }}">Read More</a>
         </div>
     </div>
     {% endfor %}
+    {% endif %}
+    <div class="text-center">
+        <ul class="pagination">
+            <li class="page-item disabled">
+                <a class="page-link" href="javascript:void(0)" aria-label="Previous">
+                    <span aria-hidden="true">«</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item active"><a class="page-link" href="#">1 <span class="sr-only">(current)</span></a></li>
+            <li class="page-item disabled">
+                <a class="page-link" href="javascript:void(0)" aria-label="Next">
+                    <span aria-hidden="true">»</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 <div class="col-md-4">
     {% include sidebar-popular-repo.html %}
