update layout and style etc.
update layout and style etc.

--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -12,21 +12,83 @@ github: css3-3d-shape-generator
 <div class="paper-title">what can do</div>
 <div class="paper-div">
     Create 3D CSS shapes below pretty easily：
-    <ul>
-        <li>cube 立方体 <img src="{{site.url}}/{{page.github}}/images/cube.png"/></li>
-        <li> polyhedron 多面框 <img src="{{site.url}}/{{page.github}}/images/polyhedron.png"/></li>
-        <li>pyramid 金字塔 <img src="{{site.url}}/{{page.github}}/images/pyramid.png"/></li>
-        <li> cylinder 圆柱体 <img src="{{site.url}}/{{page.github}}/images/cylinder.png"/></li>
-        <li> prism 棱柱 <img src="{{site.url}}/{{page.github}}/images/prism.png"/></li></li>
-        <li> sphere 球体 <img src="{{site.url}}/{{page.github}}/images/sphere.png"/></li>
-        <li> fan 扇叶 <img src="{{site.url}}/{{page.github}}/images/fan.png"/></li>
-        <li> ladder 梯 <img src="{{site.url}}/{{page.github}}/images/ladder.png"/></li>
-        <li>......</li>
-    </ul>
+    <br/><br/>
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/cube.png">
+
+                <div class="caption">
+                    <p class="text-center">cube 立方体</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/pyramid.png">
+
+                <div class="caption">
+                    <p class="text-center">pyramid 金字塔</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/polyhedron.png">
+
+                <div class="caption">
+                    <p class="text-center">polyhedron 多面框</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/cylinder.png">
+
+                <div class="caption">
+                    <p class="text-center">cylinder 圆柱体</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/prism.png">
+
+                <div class="caption">
+                    <p class="text-center">prism 棱柱</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/sphere.png">
+
+                <div class="caption">
+                    <p class="text-center">sphere 球体</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{site.url}}/{{page.github}}/images/fan.png">
+
+                <div class="caption">
+                    <p class="text-center">fan 扇叶</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="">
+
+                <div class="caption">
+                    <p class="text-center">ladder 梯</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="paper-title"> how to use</div>
 <div class="paper-div">
-    <h3>Just visit <a href="{{site.url}}/{{page.github}}">3D Shape Ganerator Page</a></h3>
-
-    <p>Maybe you need to tweak code slightly.</p>
+    <h4>Just visit <a href="{{site.url}}/{{page.github}}">3D Shape Ganerator Page</a> .Maybe you need to tweak code slightly.</h4>
 </div>
