--- a/_posts/2016-07-01-css3-3d-shape-generator.html
+++ b/_posts/2016-07-01-css3-3d-shape-generator.html
@@ -1,4 +1,5 @@
 ---
+layout: github-plugins
 menu: Blog
 title: Css3 3d Shape Generator —— generate css3 shape (cube, pyramid, cylinder, prism, sphere, fan, polyhedral iframe, ladder
 category: web-app
