--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ menu: Home
 <section class="jumbotron gradient-pattern1" data-pattern-id="ttcc">
     <div class="container">
         <h3>{{ site.description }}</h3>
+
         <div id="jumbotron-meta-info">
             <span class="meta-info">
             </span>
@@ -17,7 +18,9 @@ menu: Home
             {% for post in site.posts | limit: 8 %}
             <div class="panel panel-default">
                 <div class="panel-top">
-                    <a href="{{ post.url }}">{{ post.title }}</a>
+                    <a href="{{ post.url }}"><i class="fa fa-hand-o-right fa-fw" aria-hidden="true"></i>
+                        {{ post.title}}
+                    </a>
                 </div>
 
                 <div class="panel-body">
